--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -16,7 +16,7 @@ jobs:
           token: ${{ secrets.METRICS_TOKEN }}
 
           # Options
-          user: syricium
+          user: JohnnyJTH
           template: classic
           base: header, activity, community, repositories, metadata
           config_timezone: UTC
